fix: white screen blink on page load by applying dark mode theme immediately
The theme was being applied after React mounted, causing a visual flash. This fix adds an inline script in index.html that applies the dark mode class synchronously during page load, before React initialization. Also persists the isDark state properly using JSON.parse() instead of string comparison.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,45 @@
     -->
     <title>Internxt Drive – Private & Secure Cloud Storage</title>
 
+    <style>
+      html.dark,
+      html.dark body {
+        background-color: #111;
+        color-scheme: dark;
+      }
+    </style>
+    <script>
+      (function () {
+        try {
+          var storedTheme = localStorage.getItem('theme');
+          var persistedIsDark = localStorage.getItem('theme:isDark');
+          var systemPrefersDark = false;
+
+          try {
+            systemPrefersDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
+          } catch (matchError) {
+            systemPrefersDark = false;
+          }
+
+          var theme = storedTheme || 'system';
+          var shouldUseDark = false;
+
+          if (persistedIsDark !== null) {
+            shouldUseDark = JSON.parse(persistedIsDark);
+          } else {
+            shouldUseDark =
+              theme === 'dark' ||
+              (theme === 'system' && systemPrefersDark) ||
+              (theme !== 'system' && theme !== 'light');
+          }
+
+          if (shouldUseDark) {
+            document.documentElement.classList.add('dark');
+          }
+        } catch (error) {}
+      })();
+    </script>
+
     <script src="https://www.google.com/recaptcha/api.js?render=%REACT_APP_RECAPTCHA_V3%"></script>
     <script src="https://www.googletagmanager.com/gtag/js?id=%REACT_APP_GA_ID%"></script>
     <script>
